# crypto-layer-node

./: DEVELOPMENT.md  README.md  Taskfile.yml  cSpell.json  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/: .env
.github/actions/setup/: action.yml
.github/workflows/: build.yml  release.yml  test.yml
crates/crypto-layer-node/: Cargo.toml
crates/crypto-layer-node/src/: dhexchange.rs  keyhandle.rs  keypairhandle.rs  lib.rs  provider.rs
crates/crypto-layer-node/src/fromjs/: config.rs  error.rs  kdf.rs  mod.rs
crates/crypto-layer-node/src/tojs/: config.rs  mod.rs  wrap_error.rs
example/: .gitignore  README.md  index.ts  package-lock.json  package.json  tsconfig.json
scripts/: update-version.bun.ts  update-version.node.mjs
src/: index.cts  load.cts
tests/: common.ts  dh-exchange.test.ts  factory.test.ts  key-handle.test.ts  key-pair-handle.test.ts  provider.test.ts
